<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_donate"
        android:title="@string/title_donate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/title_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tab_order"
        android:title="@string/title_tab_order"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logs"
        android:title="@string/title_logs"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_batch_tasks"
        android:title="@string/batch_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/title_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/title_about"
        app:showAsAction="never" />

</menu>
