<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_800"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonate"
            style="@style/Widget.StreamClip.SettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_donate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSettings"
            style="@style/Widget.StreamClip.SettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTabOrder"
            style="@style/Widget.StreamClip.SettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_tab_order" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogs"
            style="@style/Widget.StreamClip.SettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_logs" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBatchTasks"
            style="@style/Widget.StreamClip.SettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/batch_tasks" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHelp"
            style="@style/Widget.StreamClip.SettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_help" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAbout"
            style="@style/Widget.StreamClip.SettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_about" />

    </LinearLayout>
</ScrollView>
